package com.dev.alan.patterns.behavioral.command;

public interface Command {
    void execute();
}
