package com.dev.alan.patterns.behavioral.command;

public class Fan {
    public void on() {
        System.out.println("Ventilador ligado");
    }

    public void off() {
        System.out.println("Ventilador desligado");
    }
}
