package com.dev.alan.patterns.behavioral.command;

public class Light {
    public void on() {
        System.out.println("Luz ligada");
    }

    public void off() {
        System.out.println("Luz desligada");
    }
}
